--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-service-worker": "^0.6.9",
+    "ember-service-worker-asset-cache": "^0.6.2",
     "ember-service-worker-index": "^0.6.3",
     "ember-source": "~2.13.0-beta.1",
     "ember-welcome-page": "^3.0.0",
