--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ember-service-worker-asset-cache": "^0.6.2",
     "ember-service-worker-index": "^0.6.3",
     "ember-source": "~2.13.0-beta.1",
+    "ember-web-app": "^2.2.0",
     "ember-welcome-page": "^3.0.0",
     "loader.js": "^4.2.3"
   },
