--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
+    "ember-add-to-homescreen": "^0.2.3",
     "ember-ajax": "^2.4.1",
     "ember-cli": "~2.13.0-beta.2",
     "ember-cli-app-version": "^3.0.0",
